---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
    
        prefix spotify:kind:artist as @Artist
        prefix spotify:attr:Name as @Name
        prefix spotify:rel:hasOne as @hasOne
        rel @Artist @hasOne @Name
        

output:

Ok(
    Structure {
        kinds: [],
        attributes: [],
        relations: [
            Relation {
                subject: Name {
                    alias: None,
                    uri: URI(
                        "spotify:kind:artist",
                    ),
                },
                predicate: Name {
                    alias: None,
                    uri: URI(
                        "spotify:rel:hasOne",
                    ),
                },
                object: Name {
                    alias: None,
                    uri: URI(
                        "spotify:attr:Name",
                    ),
                },
                fields: [],
            },
        ],
    },
)

